--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,14 @@
   width: 150px;
   padding: 15px 20px;
 }
+
+/* Button Design */
+
+.button__style{
+  border:0;
+  border-radius: 10px;
+  background-color:crimson;
+  padding: 10px 30px;
+  font-weight: 500;
+
+}
